@@ -17,6 +17,7 @@
     * 0051: Option for showing timeline directly in availability table...
     * 0052: Visual colorization of availability according to levels...
     * 0054: New labelling options for availability table...
+    * 0055: Allow grouping by host, host group or service group...
 
     Livestatus:
     * 0023 FIX: table statehist: code cleanup / minor performance improvements...
